--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,24 @@
+h1,
+h2,
+h3,
+p,
+ul {
+  margin: 0;
+  padding: 0;
+}
+
 :root {
   --hover-color: #2196f3;
+}
+
+a.contact-links-header[href="tel:+48111111111"] {
+  margin-right: 27px;
+  align-items: center;
+}
+
+a.contact-links-header[href="mailto:info@devstudio.com"] {
+  margin-right: 50px;
+  align-items: center;
 }
 
 .background-dark {
@@ -36,6 +55,14 @@
   color: var(--hover-color);
 }
 
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+}
+
 .filter-button {
   background: #f5f4fa;
   font-weight: 500;
@@ -66,6 +93,13 @@
   cursor: pointer;
 }
 
+.hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .hero-button {
   width: 200px;
   height: 50px;
@@ -77,6 +111,12 @@
   line-height: 1.88;
   color: #ffffff;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  margin-top: 30px;
+  margin-bottom: 200px;
 }
 
 .john-doe {
@@ -93,6 +133,7 @@
 
 .list {
   list-style-type: none;
+  display: flex;
 }
 
 .list li a {
@@ -122,8 +163,17 @@
   font-size: 44px;
   line-height: 1.36;
   color: #ffffff;
+  width: 696px;
+  margin-top: 200px;
+  text-align: center;
 }
 
+.navigation {
+  margin-right: 371px;
+  width: 254px;
+  justify-content: space-between;
+  align-items: center;
+}
 .projects-descriptions {
   font-size: 16px;
   line-height: 1.88;
@@ -153,4 +203,5 @@
   font-size: 26px;
   line-height: 1.2;
   text-decoration: none;
+  margin: 24px 93px 25px 15px;
 }
