--- a/css/index.css
+++ b/css/index.css
@@ -11,10 +11,6 @@ ul {
   --hover-color: #2196f3;
 }
 
-a.contact-links-footer[href="tel:+48111111111"] {
-  margin-bottom: 60px;
-}
-
 a.contact-links-footer[href="mailto:info@example.com"] {
   margin-bottom: 9px;
 }
@@ -84,16 +80,25 @@ div.container.section.activity ul {
 }
 
 .filter {
-  margin: 94px 0 34px 0;
+  display: flex;
+  margin: 0 auto;
   justify-content: center;
+  column-gap: 8px;
+  padding-top: 94px;
+  padding-bottom: 50px;
 }
 
 .filter-button {
   background: #f5f4fa;
+  font-family: "Roboto";
   font-weight: 500;
   font-size: 16px;
+  color: #212121;
   line-height: 1.62;
+  letter-spacing: 0.03em;
   border-radius: 4px;
+  border: 2px solid #f5f4fa;
+  padding: 6px 22px;
 }
 
 .filter-button:active {
@@ -101,6 +106,7 @@ div.container.section.activity ul {
   color: #ffffff;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25))
     drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  border-color: var(--hover-color);
 }
 
 .filter-button:focus {
@@ -108,6 +114,7 @@ div.container.section.activity ul {
   color: #ffffff;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25))
     drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  border-color: var(--hover-color);
 }
 
 .filter-button:hover {
@@ -116,20 +123,24 @@ div.container.section.activity ul {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25))
     drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   cursor: pointer;
+  border-color: var(--hover-color);
 }
 
 .foot {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 0 15px;
+  padding: 60px 15px;
 }
 
 .head {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   border-bottom: 1px solid #ececec;
   flex-wrap: wrap;
+  padding-top: 24px;
+  padding-bottom: 25px;
 }
 
 .hero {
@@ -208,6 +219,7 @@ div.container.section.activity ul {
   justify-content: space-between;
   max-width: 492px;
   flex-wrap: wrap;
+  align-items: center;
 }
 
 .lorem-list {
@@ -226,9 +238,21 @@ div.container.section.activity ul {
 }
 
 .navigation {
-  margin: 32px 0;
   width: 254px;
   justify-content: space-between;
+}
+
+.projects {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  padding-bottom: 94px;
+  justify-content: space-between;
+}
+
+.projects-box {
+  padding: 19px 23px;
+  border: 1px solid #eeeeee;
 }
 
 .projects-descriptions {
@@ -281,7 +305,7 @@ ul.list.lorem-list li p {
   font-size: 26px;
   line-height: 1.2;
   text-decoration: none;
-  margin: 60px 0 20px 0;
+  margin-bottom: 20px;
 }
 
 .webstudio {
@@ -289,5 +313,5 @@ ul.list.lorem-list li p {
   font-size: 26px;
   line-height: 1.2;
   text-decoration: none;
-  margin: 24px 93px 25px 0;
+  margin-right: 93px;
 }
